--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,13 +8,12 @@ a {
     text-decoration: none;
 }
 .hero {
-    
-    background: #2e2f42;
+     background: #2e2f42;
     width: 1440px;
     height: 600px;   
 }
 h1 {
-    font-weight: 700;
+        font-weight: 700;
         font-size: 56px;
     
         /* line-height: 60px; */
@@ -52,11 +51,12 @@ p {
         color: #434455;
 }
 .header-logo {
+        font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
     
         /* line-height: 21px; */
-        line-height: 1.16667;
+        line-height: 1.7;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
@@ -77,4 +77,85 @@ p {
         height: 56px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         background: #4d5ae5;
+}
+.header-menu-link {
+        font-weight: 500;
+        font-size: 16px;
+    
+        /* line-height: 24px; */
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
+.contact-list {
+        font-weight: 400;
+        font-size: 16px;
+    
+        /* line-height: 24px; */
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+}
+.team {
+    background: #f4f4fd;
+}
+.team-title {
+        font-weight: 500;
+        font-size: 20px;
+    
+        /* line-height: 24px; */
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+}
+.team-text {
+        font-weight: 400;
+        font-size: 16px;
+    
+        /* line-height: 24px; */
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #434455;
+}
+.portfolio {
+        font-weight: 700;
+        font-size: 36px;
+    
+        /* line-height: 40px; */
+        line-height: 1.11111;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+}
+.portfolio-title {
+        font-weight: 500;
+        font-size: 20px;
+    
+        /* line-height: 24px; */
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
+.portfolio-text {
+        font-weight: 400;
+        font-size: 16px;
+    
+        /* line-height: 24px; */
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+}
+.footer-text {
+        font-weight: 400;
+        font-size: 16px;
+    
+        /* line-height: 24px; */
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+}
+.page-footer {
+    background: #2e2f42;
 }
