--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,16 +1,16 @@
 body {
-    font-family: "roboto", sans-serif;
+       font-family: "roboto", sans-serif;
 }
 ul {
-    list-style-type: none;
+       list-style-type: none;
 }
 a {
-    text-decoration: none;
+       text-decoration: none;
 }
 .hero {
-     background: #2e2f42;
-    width: 1440px;
-    height: 600px;   
+        background: #2e2f42;
+        width: 1440px;
+        height: 600px;   
 }
 h1 {
         font-weight: 700;
@@ -65,7 +65,21 @@ p {
         color: #2e2f42;
         font-family: "Raleway", sans-serif;
 }
+.header-menu-list {
+       color: #2E2F42;
+}
+.header-menu-list:hover,
+.header-menu-list:focus {
+        color: #404BBF
+}
+.contacts-list {
+        color: #434455
+}
+.contacts-list:hover, .contacts-list:focus {
+        color: #404BBF
+}
 .hero-btn {
+        cursor: pointer;
         display: flex;
         align-items: flex-start;
         justify-content: flex-start;
@@ -77,6 +91,9 @@ p {
         height: 56px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         background: #4d5ae5;
+}
+.hero-btn:hover, .hero-btn:focus {
+       background: #404BBF
 }
 .header-menu-link {
         font-weight: 500;
@@ -146,16 +163,38 @@ p {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
-}
+} 
 .footer-text {
-        font-weight: 400;
-        font-size: 16px;
-    
-        /* line-height: 24px; */
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
+    font-weight: 400;
+    font-size: 16px;
+
+    /* line-height: 24px; */
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+}
+.footer-logo {
+    font-weight: 700;
+    font-size: 18px;
+
+    /* line-height: 21px; */
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+.footer-logo-text {
+    font-weight: 700;
+    font-size: 18px;
+
+    /* line-height: 21px; */
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #f4f4fd;
 }
 .page-footer {
-    background: #2e2f42;
+        background: #2e2f42;
+        width: 1440px;
+        height: 312px;
 }
