--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,6 +22,13 @@ a {
   text-align: center;
   color: #fff;
 }
+.futures-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -130,6 +137,9 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+}
+.team-item {
+  background-color: #ffffff;
 }
 .portfolio-our {
   font-weight: 700;
