--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -45,8 +45,8 @@ a {
 .header-menu-list {
   color: #2e2f42;
 }
-.header-menu-list:hover,
-.header-menu-list:focus {
+.header-menu-link:hover,
+.header-menu-link:focus {
   color: #404bbf;
 }
 .contacts-list {
@@ -59,6 +59,9 @@ a {
 .contacts-list:hover,
 .contacts-list:focus {
   color: #404bbf;
+}
+.contacts {
+  font-style: normal;
 }
 .hero-btn {
   font-family: "Roboto", sans-serif;
